Testing fix for dropdown getting overlapped issue

--- a/team_project/css/global.css
+++ b/team_project/css/global.css
@@ -254,6 +254,23 @@ footer {
     min-height: 100px;
 }
 
+.dropdown-wrap,
+.dropdown {
+  position: relative;
+  z-index: 1002;
+}
+
+.dropdown-content {
+  display: none;
+  position: fixed;
+  top: 140px;
+  left: auto;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 12px 0px rgba(0,0,0,0.2);
+  z-index: 2000;
+}
+
 /* SECONDARY NAVIGATION - Links inside the dropdown */
 .dropdown-content a {
 	color: black;
